# Simple-Shader

./: CMakeLists.txt  README.md  README_En.md
inc/: Texture.hpp  rasterizer.hpp
src/: Triangle.cpp  main.cpp  rasterizer.cpp
